--- a/css/utilities.css
+++ b/css/utilities.css
@@ -12,7 +12,7 @@
 
 /* Titres & Paragraphe */
 .heading-1 {
-
+  font-size: 1.5rem;
 }
 
 .heading-2 {
@@ -33,9 +33,9 @@
 
 /* Boutons */
 .btn {
-
+  border-radius: 10px;
 }
 
 .btn--cta {
-
+  background-color: var(--color-primary);
 }
