--- a/css/main.css
+++ b/css/main.css
@@ -127,3 +127,49 @@ input {
   justify-self: flex-end;
   color: #fff;
 }
+
+/* Filters */
+.filters__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.filters__item {
+  font-weight: 700;
+  border: 2px solid var(--color-secondary);
+  border-radius: 30px;
+  display: flex;
+  margin: .4rem;
+}
+
+.filters__item div {
+  background-color: var(--color-primary-light);
+  color: var(--color-primary);
+  border-radius: 50%;
+  padding: .8rem;
+  width: 1rem;
+  text-align: center;
+}
+
+.filters__link {
+  padding: .8rem;
+}
+
+.filters__info {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.filters__info i {
+  padding: .5rem .8rem;
+  margin-right: .5rem;
+  font-size: .8rem;
+  color: var(--color-primary);
+  border: 1px solid var(--color-secondary);
+  border-radius: 50%;
+}
+
+/* Popular */
+.popular {
+  background-color: var(--color-secondary);
+  padding: 1rem;
+}
