--- a/css/utilities.css
+++ b/css/utilities.css
@@ -3,12 +3,18 @@
 /* Backgroud Color */
 
 .bg--white {
-  
+  background-color: var(--color-white);
 }
 
 .bg--light {
   background-color: var(--color-primary-light);
 }
+
+/* Color */
+.color--secondary {
+  color: var(--color-secondary);
+}
+
 
 /* Titres & Paragraphe */
 .heading-1 {
@@ -24,11 +30,11 @@
 }
 
 .heading-4 {
-
+  margin: .3rem 0;
 }
 
 .paragraph {
-  
+  margin: 0;
 }
 
 /* Boutons */
