--- a/css/utilities.css
+++ b/css/utilities.css
@@ -81,3 +81,37 @@
 .p-medium {
   padding: 3rem 0;
 }
+
+/* Card */
+.card {
+  border-radius: 15px;
+  display: flex;
+
+  /* À modifier !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+}
+
+.card img {
+  width: 40%;
+  object-fit: cover;
+  padding-right: 1rem;
+  border-radius: 15px 0 0 15px;
+}
+
+.card__info {
+  padding-right: .5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card__info p {
+  font-size: .7rem;
+}
+
+.card__icons {
+  color: var(--color-primary);
+  font-size: .5rem;
+}
