--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 /* Global */
 body {
   font-family: 'Raleway', sans-serif;
-  color: #000;
+  color: var(--color-black);
 }
 
 a {
   text-decoration: none;
-  color: #000;
+  color: var(--color-black);
 }
 
 ul, ol {
@@ -116,12 +116,12 @@ input {
 }
 
 .search__input::-webkit-input-placeholder {
-  color: #000;
+  color: var(--color-black);
 }
 
 .search__button {
   justify-self: flex-end;
-  color: #fff;
+  color: var(--color-white);
 }
 
 /* //////// */
@@ -181,6 +181,31 @@ input {
   padding: 5px;
 }
 
+/* ///////////// */
+/* Hébergements */
+.lodging__card img {
+  padding: 0;
+  box-sizing: border-box;
+  border-radius: 15px 15px 0 0;
+  width: auto;
+  height: 60%;
+}
+.lodging__card {
+  padding: 0;
+  flex-direction: column;
+  height: 190px;
+}
+
+.lodging__card .card__info {
+  padding: .5rem 1rem;
+}
+
+/* Transformer les card lodging + activities en card--horizontal !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
+.lodging__more {
+  font-weight: 700;
+}
+
 /* ////////// */
 /* Activités */
 .activities__card img {
@@ -194,11 +219,10 @@ input {
 .activities__card {
   padding: 0;
   flex-direction: column;
-  height: 200px;
+  height: 190px;
 }
 
 .activities .card__info {
-  padding: 1rem;
   height: 100%;
   justify-content: center;
 }
