--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,13 @@
-/* Global */
+html {
+  /* 1rem = 10px  */
+  /* 10/16 * 100 */
+  font-size: 62.5%;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-size: var(--default-font-size);
   color: var(--color-black);
 }
 
@@ -9,7 +16,8 @@ a {
   color: var(--color-black);
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 
   /* CHECK AVEC PIERRE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
@@ -22,7 +30,7 @@ button {
   color: var(--color-primary);
   font-weight: 700;
   border: none;
-  padding: 1rem;
+  padding: 1.6rem;
   outline: none;
 }
 
@@ -31,40 +39,36 @@ input {
 }
 
 /* /////// */
+/* /////// */
 /* Header */
 .header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
-
-.header__logo {
-  justify-self: flex-start;
+  align-items: center;
 }
 
 .header__nav {
   order: 3;
   width: 100%;
-
   display: flex;
   align-items: center;
 }
 
 .header__list {
   width: 100%;
-
   display: flex;
   align-items: center;
 }
 
 .header__item {
   flex-basis: 50%;
-  
   display: flex;
   justify-content: center;
 }
 
 .header__link {
+  font-size: var(--default-font-size);
   flex-basis: 100%;
   text-align: center;
 
@@ -72,29 +76,26 @@ input {
 }
 
 .header__link--active {
-
   color: var(--color-primary);
   border-bottom: 3px solid var(--color-primary);
 }
 
-.header__register {
-  justify-self: flex-end;
+/* ///// */
+/* Main */
+.main {
+  padding: 0 5rem;
 }
 
 /* /////// */
 /* Search */
-.main-header {
-  padding: 0 1rem;
-}
-
 .search {
-  overflow: hidden;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   border: 1px solid var(--color-secondary);
   border-radius: 12px;
+  font-size: var(--default-font-size);
 }
 
 .search__gps {
@@ -124,26 +125,29 @@ input {
   color: var(--color-white);
 }
 
+/* /////// */
 /* //////// */
 /* Filters */
 .filters__list {
   display: flex;
   flex-wrap: wrap;
+  background-color: red;
 }
 .filters__item {
   font-weight: 700;
   border: 2px solid var(--color-secondary);
-  border-radius: 30px;
+  border-radius: 3rem;
   display: flex;
-  margin: .4rem;
+  align-items: center;
+  margin-top: 1rem;
+  margin-right: 1rem;
 }
 
 .filters__item div {
   background-color: var(--color-primary-light);
   color: var(--color-primary);
   border-radius: 50%;
-  padding: .8rem;
-  width: 1rem;
+  padding: 1.5rem;
 
   display: flex;
   justify-content: center;
@@ -151,7 +155,7 @@ input {
 }
 
 .filters__link {
-  padding: .8rem;
+  padding: 1.5rem;
 }
 
 .filters__info {
@@ -160,11 +164,11 @@ input {
   position: relative;
 }
 .filters__info i {
-  padding: .5rem .8rem;
-  margin-right: .5rem;
-  font-size: .8rem;
+  padding: 0.75rem 1rem;
+  margin-right: 0.5rem;
+  font-size: 1rem;
   color: var(--color-primary);
-  border: 1px solid var(--color-secondary);
+  border: 2px solid var(--color-secondary);
   border-radius: 50%;
 }
 
@@ -175,9 +179,12 @@ input {
   justify-content: space-between;
   align-items: center;
 }
+.popular__header i {
+  font-size: 2.25rem;
+}
 
 .popular__card {
-  height: 100px;
+  height: 140px;
   padding: 5px;
 }
 
@@ -197,7 +204,7 @@ input {
 }
 
 .lodging__card .card__info {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 /* Transformer les card lodging + activities en card--horizontal !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
@@ -229,9 +236,13 @@ input {
 
 /* /////// */
 /* Footer */
-footer > div:not(:last-child) {
-  margin-bottom: 2.5rem;
+.footer {
+  padding: 4rem;
 }
+footer > div:not(:last-child) {
+  margin-bottom: 4rem;
+}
+
 .footer__item {
-  padding: .3rem 0;
+  padding: 0.8rem 0;
 }
