--- a/css/utilities.css
+++ b/css/utilities.css
@@ -13,26 +13,31 @@
   color: var(--color-secondary);
 }
 
+.color--black {
+  color: var(--color-black);
+}
 
 /* Titres & Paragraphe */
 .heading-1 {
-  font-size: 1.5rem;
+  font-size: 2.25rem;
 }
 
 .heading-2 {
   margin: 0;
+  font-size: 2.25rem;
 }
 
 .heading-3 {
-
 }
 
 .heading-4 {
-  margin: .3rem 0;
+  margin: 0.3rem 0;
+  font-size: 1.8rem;
 }
 
 .paragraph {
   margin: 0;
+  font-size: var(--default-font-size);
 }
 
 /* Boutons */
@@ -51,7 +56,7 @@
 }
 
 .m-small {
-  margin: 2rem 0;
+  margin: 3rem 0;
 }
 
 .m-medium {
@@ -67,23 +72,23 @@
 }
 
 .mb-smallest {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .mb-small {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 
 /* Padding */
 .p-smallest {
-  padding: 1rem;
+  padding: 1.5rem;
 }
 
 .p-small {
   padding: 2rem;
 }
 .p-medium {
-  padding: 3rem 0;
+  padding: 2.5rem;
 }
 
 /* Card */
@@ -92,9 +97,9 @@
   display: flex;
 
   /* À modifier !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
 .card img {
@@ -106,17 +111,17 @@
 
 .card__info {
   height: 100%;
-  padding-right: .5rem;
+  padding-right: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .card__info p {
-  font-size: .85rem;
+  font-size: 1.4rem;
 }
 
 .card__icons {
   color: var(--color-primary);
-  font-size: .5rem;
+  font-size: 1.25rem;
 }
