--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,6 @@
 /* Variables */
 :root {
+  /* Colors */
   --color-primary: #0065fc;
   --color-primary-light: #deebff;
 
@@ -7,4 +8,7 @@
 
   --color-white: #fff;
   --color-black: #000;
+
+  /* Font Size */
+  --default-font-size: 1.6rem;
 }
