--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,20 +1,44 @@
 /* Media Queries & Breakpoints */
 
-/* Phone = 600px */
-/* Tablet Portrait = 900px */
-/* Tablet Landscape = 1200px */
-/* Desktop = 1800px */
+/* Phone = 600px ou moins */
+/* Tablet Portrait = de 600 à 900px */
+/* Tablet Landscape = de 900 à 1200px */
+/* Desktop = 1200px ou plus */
 
 @media (min-width: 600px) {
   html {
     font-size: 75%;
   }
 
+  .lodging {
+    box-sizing: border-box;
+    border-radius: 2rem;
+    order: 1;
+    flex-basis: 68%;
+    background-color: var(--color-secondary);
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 2rem 4rem;
+  }
+
+  .lodging h2 {
+    flex-basis: 100%;
+  }
+
+  .lodging__more {
+    flex-basis: 100%;
+  }
+
+  .lodging__card {
+    flex-basis: 45%;
+  }
+
   /* Footer */
   .footer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
   }
 
   .footer > div {
@@ -26,7 +50,7 @@
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1200px) {
   /* Header */
 
   .header {
@@ -59,6 +83,18 @@
   /* Main */
   .main {
     padding: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .main-header {
+    flex-basis: 100%;
+  }
+
+  /* Hébergements */
+  .lodging__card {
+    flex-basis: 30%;
   }
 
   /* Popular */
@@ -69,7 +105,33 @@
   /* Activities */
   .activities {
     display: flex;
-    margin: 5rem 0;
+    flex-direction: column !important;
+    flex-wrap: wrap !important;
+    width: 100%;
+    height: 600px;
+    padding: 0;
+    margin-top: 1rem;
+  }
+
+  .activities__card {
+    margin: 2rem;
+  }
+  .activities__card:nth-of-type(1),
+  .activities__card:nth-of-type(4) {
+    flex-basis: 100%;
+  }
+
+  .activities__card:nth-of-type(2) {
+    flex-grow: 2;
+  }
+
+  .activities__card:nth-of-type(3) {
+    flex-shrink: 1;
+  }
+
+  .activities__card:nth-of-type(5),
+  .activities__card:nth-of-type(6) {
+    flex-grow: 1;
   }
 
   /* Footer */
@@ -81,14 +143,6 @@
     margin-right: 20rem;
   }
 
-  .main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .main-header {
-    flex-basis: 100%;
-  }
   .filters {
     display: flex;
     align-items: center;
@@ -103,30 +157,7 @@
   .filters__info {
     flex-basis: 100%;
   }
-  .lodging {
-    box-sizing: border-box;
-    border-radius: 2rem;
-    order: 1;
-    flex-basis: 68%;
-    background-color: var(--color-secondary);
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 2rem 4rem;
-  }
 
-  .lodging h2 {
-    flex-basis: 100%;
-  }
-
-  .lodging__more {
-    flex-basis: 100%;
-  }
-
-  .lodging__card {
-    flex-basis: 30%;
-  }
   .popular {
     box-sizing: border-box;
     border-radius: 2rem;
