--- a/css/utilities.css
+++ b/css/utilities.css
@@ -24,15 +24,16 @@
 
 .heading-2 {
   margin: 0;
-  font-size: 2rem;
+  font-size: 2.2rem;
 }
 
 .heading-3 {
+  margin: 1rem 0;
 }
 
 .heading-4 {
-  margin: 0.3rem 0;
-  font-size: 1.8rem;
+  margin: 0.5rem 0;
+  font-size: 1.75rem;
 }
 
 .paragraph {
@@ -97,7 +98,7 @@
   border-radius: 15px;
   display: flex;
 
-  /* À modifier !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+  /* À modifier ? */
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
@@ -106,13 +107,12 @@
 .card img {
   width: 40%;
   object-fit: cover;
-  padding-right: 1rem;
   border-radius: 15px 0 0 15px;
 }
 
 .card__info {
+  padding: 1rem 1.5rem;
   height: 100%;
-  padding-right: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -125,4 +125,15 @@
 .card__icons {
   color: var(--color-primary);
   font-size: 1.25rem;
+}
+
+.card--horizontal {
+  flex-direction: column;
+  height: 200px;
+}
+
+.card--horizontal img {
+  border-radius: 15px 15px 0 0;
+  width: auto;
+  height: 60%;
 }
