Mise à jour du Responsive

--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,11 @@ input {
 
 /* ////////// */
 /* Activités */
+
+.activities__container {
+  width: 100%;
+  height: 100%;
+}
 .activities__card img {
   height: 70%;
 }
