--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,34 +5,19 @@
 /* Tablet Landscape = de 900 à 1200px */
 /* Desktop = 1200px ou plus */
 
+/* Tablet Portrait */
 @media (min-width: 600px) {
   html {
     font-size: 75%;
   }
 
-  .lodging {
-    box-sizing: border-box;
-    border-radius: 2rem;
-    order: 1;
-    flex-basis: 68%;
-    background-color: var(--color-secondary);
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 2rem 4rem;
+  /* Card */
+  .card {
+    height: 250px;
   }
 
-  .lodging h2 {
-    flex-basis: 100%;
-  }
-
-  .lodging__more {
-    flex-basis: 100%;
-  }
-
-  .lodging__card {
-    flex-basis: 45%;
+  .card--horizontal {
+    height: 300px;
   }
 
   /* Footer */
@@ -44,18 +29,58 @@
   .footer > div {
     flex-basis: 50%;
   }
+}
 
-  .footer__help {
+/* Tablet Landscape */
+@media (min-width: 900px) {
+  .main-header,
+  .popular,
+  .lodging,
+  .activities,
+  .footer {
+    padding: 5rem;
+  }
+
+  /* Hébergements */
+  .lodging,
+  .activities {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .lodging h2,
+  .lodging_more {
     flex-basis: 100%;
+  }
+
+  .lodging__card,
+  .activities__card {
+    flex-basis: 45%;
+  }
+
+  /* Footer */
+  .footer {
+    justify-content: space-between;
+  }
+  .footer > div {
+    flex-basis: auto;
   }
 }
 
+/* Desktop */
 @media (min-width: 1200px) {
   /* Header */
 
   .header {
     flex-wrap: nowrap;
-    justify-content: flex-end;
+    height: 100px;
+    align-items: center;
+  }
+
+  .header__logo,
+  .header__register {
+    padding: 5rem;
   }
 
   .header__logo {
@@ -63,14 +88,23 @@
   }
 
   .header__nav {
+    height: 100%;
+    width: 30%;
     order: 0;
   }
 
+  .header__list {
+    height: 100%;
+  }
+
   .header__item {
-    flex-basis: auto;
+    height: 100%;
+    flex-basis: 100%;
   }
 
   .header__link {
+    background-color: blanchedalmond;
+    height: 100%;
     border-top: 3px solid var(--color-secondary);
     border-bottom: none;
   }
@@ -82,7 +116,7 @@
 
   /* Main */
   .main {
-    padding: 5rem;
+    padding: 4rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -90,31 +124,72 @@
 
   .main-header {
     flex-basis: 100%;
+    padding: 0;
   }
 
   /* Hébergements */
+  .lodging {
+    background-color: var(--color-secondary);
+    border-radius: 2rem;
+    flex-basis: 70%;
+    padding: 2rem 3rem;
+  }
+  .lodging h2 {
+    padding: 2rem 0;
+  }
   .lodging__card {
     flex-basis: 30%;
   }
+  .lodging__card img {
+    height: 70%;
+  }
+  .lodging__more {
+    flex-basis: 100%;
+  }
 
   /* Popular */
+  .popular {
+    flex-basis: 27.5%;
+    border-radius: 2rem;
+    order: 2;
+    padding: 2rem 3rem;
+  }
   .popular__header {
     padding: 2rem 0;
+  }
+  .popular__card {
+    height: 200px;
   }
 
   /* Activities */
   .activities {
-    display: flex;
-    flex-direction: column !important;
-    flex-wrap: wrap !important;
+    margin-top: 3rem;
     width: 100%;
-    height: 600px;
-    padding: 0;
-    margin-top: 1rem;
+    padding: 2rem 0;
+    order: 3;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .activities__card img {
+    height: 80%;
   }
 
-  .activities__card {
-    margin: 2rem;
+  .activities__container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 500px;
+  }
+
+  .activities__card h4 {
+    margin: 0;
+  }
+
+  .activities__card:not(:last-of-type) {
+    margin-right: 5rem;
   }
   .activities__card:nth-of-type(1),
   .activities__card:nth-of-type(4) {
@@ -122,7 +197,7 @@
   }
 
   .activities__card:nth-of-type(2) {
-    flex-grow: 2;
+    flex-grow: 1;
   }
 
   .activities__card:nth-of-type(3) {
@@ -136,7 +211,7 @@
 
   /* Footer */
   .footer {
-    padding: 5rem;
+    padding: 4rem;
   }
 
   .footer__item {
@@ -155,23 +230,6 @@
     margin: 0;
   }
   .filters__info {
-    flex-basis: 100%;
-  }
-
-  .popular {
-    box-sizing: border-box;
-    border-radius: 2rem;
-    order: 2;
-    flex-basis: 28%;
-    padding: 0 4rem;
-  }
-  .activities {
-    order: 3;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .activities h2 {
     flex-basis: 100%;
   }
 }
