--- a/css/main.css
+++ b/css/main.css
@@ -156,15 +156,15 @@ input {
   color: var(--color-primary);
   border-radius: 50%;
   padding: 1.3rem;
-  width: 45px;
-  height: 45px;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .filters__link {
-  padding: 1.3rem;
+  padding: 0 2rem;
 }
 
 .filters__info {
