--- a/css/utilities.css
+++ b/css/utilities.css
@@ -97,11 +97,17 @@
   overflow: hidden;
   border-radius: 15px;
   display: flex;
+  cursor: pointer;
 
   /* À modifier ? */
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+}
+.card:hover {
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
 }
 
 .card img {
