--- a/css/main.css
+++ b/css/main.css
@@ -27,14 +27,6 @@ ol {
   list-style: none;
 }
 
-button {
-  background-color: transparent;
-  color: var(--color-primary);
-  border: none;
-  padding: 1.6rem;
-  outline: none;
-}
-
 input {
   border: none;
 }
@@ -131,6 +123,12 @@ input {
 .search__button {
   justify-self: flex-end;
   color: var(--color-white);
+  border-radius: 0;
+  transition: all 0.2s;
+}
+
+.search__button:hover {
+  background-color: var(--color-black);
 }
 
 .search__button p {
@@ -217,6 +215,7 @@ input {
 .activities__container {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 .activities__card img {
   height: 70%;
