--- a/css/utilities.css
+++ b/css/utilities.css
@@ -43,8 +43,12 @@
 
 /* Boutons */
 .btn {
-  color: var(var(--color-black));
+  background-color: transparent;
+  color: var(--color-black);
+  border: none;
   border-radius: 12px;
+  padding: 1.6rem;
+  cursor: pointer;
 }
 
 .btn--cta {
@@ -99,7 +103,6 @@
   display: flex;
   cursor: pointer;
 
-  /* À modifier ? */
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
