--- a/css/main.css
+++ b/css/main.css
@@ -240,12 +240,14 @@ input {
 }
 
 .activities .card__info {
-  height: 100%;
   justify-content: center;
 }
 
 /* /////// */
 /* Footer */
+.footer {
+  overflow: hidden;
+}
 
 footer > div:not(:last-child) {
   margin-bottom: 4rem;
