Modification du Bouton Recherche

--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,8 @@ input {
   background-color: var(--color-black);
 }
 
-.search__button p {
+.search__button:after {
+  content: 'Rechercher';
   display: none;
 }
 
