--- a/css/responsive.css
+++ b/css/responsive.css
@@ -263,7 +263,7 @@
   }
 
   .activities__card {
-    margin-right: 5rem;
+    width: 22.5%;
   }
 
   .activities__card:nth-of-type(1),
@@ -282,7 +282,6 @@
   .activities__card:nth-of-type(5),
   .activities__card:nth-of-type(6) {
     flex: 1;
-    margin-right: 0;
   }
 
   /* Footer */
